--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <meta name="description" content="CoreUI for React - Open Source Bootstrap Admin Template">
     <meta name="author" content="Łukasz Holeczek">
     <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,CSS,SCSS,HTML,RWD,Dashboard,React">
-    <title>Bích Bờ Bôn Music Admin Dashboard</title>
+    <title>Bích Bờ Bôn Music </title>
     <link rel="manifest" href="/manifest.json">
-    <link rel="shortcut icon" href="/brand-spotify.png">
+    <link rel="shortcut icon" href="/favicon.ico">
   </head>
   <body>
     <noscript>
